--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -22,7 +22,7 @@ author_profile: true
         <table>
             <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                    <img src="images/renewenegry.png" alt="Environmental Quality" width="150" height="150" style="border-style: none">
+                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="150" height="150" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
                     <a href="https://doi.org/10.1016/j.renene.2023.05.044">
@@ -46,7 +46,7 @@ author_profile: true
 
             <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                    <img src="images/Greeneffect.png" alt="Green Effect" width="150" height="150" style="border-style: none">
+                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="150" height="150" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
                     <a href="https://doi.org/10.1016/j.frl.2024.105669">  
@@ -76,7 +76,7 @@ author_profile: true
         <table>
             <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
-                    <img src="images/rechar_framework.png" alt="ReChar" width="150" height="150" style="border-style: none">
+                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="150" height="150" style="border-style: none">
                 </td>
                 <td width="75%" valign="middle">
                     <a href="https://01yzzyu.github.io/rechar.github.io/">
