--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,6 +7,22 @@ author_profile: true
 
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <style>
+        table {
+            border-collapse: collapse; /* 合并表格边框 */
+            width: 100%; /* 表格宽度 */
+        }
+        td {
+            border: none; /* 移除单元格边框 */
+            padding: 20px; /* 单元格内边距 */
+            vertical-align: middle; /* 垂直居中 */
+        }
+        img {
+            border-style: none; /* 移除图片边框 */
+        }
+    </style>
+</head>
 <body>
     <main>
         {% if site.author.googlescholar %}
@@ -21,10 +37,10 @@ author_profile: true
 
         <table>
             <tr>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="150" height="150" style="border-style: none">
+                <td style="width:25%;">
+                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="150" height="150">
                 </td>
-                <td width="75%" valign="middle">
+                <td>
                     <a href="https://doi.org/10.1016/j.renene.2023.05.044">
                         <papertitle>Toward enhancing environmental quality in OECD countries: Role of municipal waste, renewable energy, environmental innovation, and environmental policy</papertitle>
                     </a>
@@ -45,11 +61,11 @@ author_profile: true
             </tr>
 
             <tr>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="150" height="150" style="border-style: none">
+                <td style="width:25%;">
+                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="150" height="150">
                 </td>
-                <td width="75%" valign="middle">
-                    <a href="https://doi.org/10.1016/j.frl.2024.105669">  
+                <td>
+                    <a href="https://doi.org/10.1016/j.frl.2024.105669">    
                         <papertitle>Green effect of energy transition policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</papertitle>
                     </a>
                     <br><br>
@@ -75,10 +91,10 @@ author_profile: true
 
         <table>
             <tr>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="150" height="150" style="border-style: none">
+                <td style="width:25%;">
+                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="150" height="150">
                 </td>
-                <td width="75%" valign="middle">
+                <td>
                     <a href="https://01yzzyu.github.io/rechar.github.io/">
                         <papertitle>ReChar: <font color="#FF0000">Re</font>vitalising <font color="#FF0000">Char</font>acters with Structure-Preserved and User-Specified Aesthetic Enhancements</papertitle>
                     </a>
