--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -20,6 +20,8 @@ author_profile: true
         }
         img {
             border-style: none; /* 移除图片边框 */
+            max-width: 100%; /* 确保图片不会超出容器 */
+            height: auto; /* 保持图片比例 */
         }
     </style>
 </head>
@@ -38,7 +40,7 @@ author_profile: true
         <table>
             <tr>
                 <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="150" height="150">
+                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="250" height="250">
                 </td>
                 <td>
                     <a href="https://doi.org/10.1016/j.renene.2023.05.044">
@@ -62,10 +64,10 @@ author_profile: true
 
             <tr>
                 <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="150" height="150">
+                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="250" height="250">
                 </td>
                 <td>
-                    <a href="https://doi.org/10.1016/j.frl.2024.105669">    
+                    <a href="https://doi.org/10.1016/j.frl.2024.105669">      
                         <papertitle>Green effect of energy transition policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</papertitle>
                     </a>
                     <br><br>
@@ -92,7 +94,7 @@ author_profile: true
         <table>
             <tr>
                 <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="150" height="150">
+                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="250" height="250">
                 </td>
                 <td>
                     <a href="https://01yzzyu.github.io/rechar.github.io/">
