--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,6 +9,7 @@ author_profile: true
 <html lang="en">
 <head>
     <style>
+        /* 全局样式 */
         table {
             border-collapse: collapse; /* 合并表格边框 */
             width: 100%; /* 表格宽度 */
@@ -23,6 +24,13 @@ author_profile: true
             max-width: 100%; /* 确保图片不会超出容器 */
             height: auto; /* 保持图片比例 */
         }
+        h2 {
+            margin: 0; /* 移除默认的外边距 */
+            padding: 0; /* 移除默认的内边距 */
+            border: none; /* 移除边框 */
+            font-size: 24px; /* 调整标题字体大小 */
+            color: #333; /* 标题颜色 */
+        }
     </style>
 </head>
 <body>
@@ -35,12 +43,13 @@ author_profile: true
 
         <hr>
 
+        <!-- Energy Economics 部分 -->
         <h2>📄 Energy Economics</h2>
 
         <table>
             <tr>
                 <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="250" height="250">
+                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="350" height="350">
                 </td>
                 <td>
                     <a href="https://doi.org/10.1016/j.renene.2023.05.044">
@@ -64,7 +73,7 @@ author_profile: true
 
             <tr>
                 <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="250" height="250">
+                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="350" height="350">
                 </td>
                 <td>
                     <a href="https://doi.org/10.1016/j.frl.2024.105669">      
@@ -89,12 +98,13 @@ author_profile: true
 
         <hr>
 
+        <!-- Manuscripts 部分 -->
         <h2>📄 Manuscripts</h2>
 
         <table>
             <tr>
                 <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="250" height="250">
+                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="350" height="350">
                 </td>
                 <td>
                     <a href="https://01yzzyu.github.io/rechar.github.io/">
