--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,26 +10,43 @@ author_profile: true
 <head>
     <style>
         /* 全局样式 */
-        table {
-            border-collapse: collapse; /* 合并表格边框 */
-            width: 100%; /* 表格宽度 */
+        .publication-item {
+            display: flex; /* 使用 Flexbox 布局 */
+            align-items: center; /* 垂直居中 */
+            margin-bottom: 40px; /* 每个项目之间的间距 */
         }
-        td {
-            border: none; /* 移除单元格边框 */
-            padding: 20px; /* 单元格内边距 */
-            vertical-align: middle; /* 垂直居中 */
-        }
-        img {
+        .publication-item img {
             border-style: none; /* 移除图片边框 */
-            max-width: 100%; /* 确保图片不会超出容器 */
+            width: 300px; /* 图片宽度 */
             height: auto; /* 保持图片比例 */
+            margin-right: 20px; /* 图片与文字之间的间距 */
         }
-        h2 {
-            margin: 0; /* 移除默认的外边距 */
-            padding: 0; /* 移除默认的内边距 */
-            border: none; /* 移除边框 */
-            font-size: 24px; /* 调整标题字体大小 */
+        .publication-content {
+            flex: 1; /* 文字部分占据剩余空间 */
+        }
+        .papertitle {
+            font-size: 18px; /* 标题字体大小 */
+            font-weight: bold; /* 标题加粗 */
             color: #333; /* 标题颜色 */
+        }
+        .authors {
+            margin: 10px 0; /* 作者信息的外边距 */
+            color: #555; /* 作者信息颜色 */
+        }
+        .abstract {
+            margin: 10px 0; /* 摘要的外边距 */
+            color: #666; /* 摘要颜色 */
+        }
+        .metadata {
+            font-style: italic; /* 元数据斜体 */
+            color: #777; /* 元数据颜色 */
+        }
+        a {
+            color: #0F52BA; /* 链接颜色 */
+            text-decoration: none; /* 去掉下划线 */
+        }
+        a:hover {
+            text-decoration: underline; /* 鼠标悬停时显示下划线 */
         }
     </style>
 </head>
@@ -44,74 +61,62 @@ author_profile: true
         <hr>
 
         <!-- Energy Economics 部分 -->
-        <h2>📄 Energy Economics</h2>
-
-        <table>
-            <tr>
-                <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality" width="350" height="350">
-                </td>
-                <td>
-                    <a href="https://doi.org/10.1016/j.renene.2023.05.044">
-                        <papertitle>Toward enhancing environmental quality in OECD countries: Role of municipal waste, renewable energy, environmental innovation, and environmental policy</papertitle>
-                    </a>
-                    <br><br>
+        <div class="publication-item">
+            <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality">
+            <div class="publication-content">
+                <a href="https://doi.org/10.1016/j.renene.2023.05.044">
+                    <div class="papertitle">Toward enhancing environmental quality in OECD countries: Role of municipal waste, renewable energy, environmental innovation, and environmental policy</div>
+                </a>
+                <div class="authors">
                     Mengying Su, &nbsp;
                     <strong style="color: #0F52BA;">Zhongyu Yang*</strong>, &nbsp;
                     Shujaat Abbas, &nbsp;
                     et al.
-                    <br>
-                    <br>
+                </div>
+                <div class="abstract">
                     The considerable increase in municipal waste has become a primary global concern due to the contamination of the environment through the emission of greenhouse gases. Therefore, many OECD countries have adopted municipal waste management practices. This study is a baseline attempt to explore the long-term effect of municipal waste management along with the energy transition, environmental innovation, and environmental policy stringency on GHG emissions in ten OECD countries from 1994 to 2020. This objective is realized by using non-parametric panel quantile regression. The estimated result reveals the asymmetric effect of selected explanatory variables on GHG emissions at various quantiles. The findings show that an increase in municipal waste can increase GHGs emissions at lower quantiles, while an insignificant effect is observed at higher quantiles. Similarly, energy transition, environmental innovation, and environmental policy stringency reveal asymmetric effects across the quantiles. The findings urge OECD countries to adopt more efficient municipal waste management practices and encourage renewable energy transition and environmental innovation. Environmental policy stringency can also be instrumental in enhancing environmental sustainability.
-                    <br><br>
-                    <em style="font-size: 16px;">Renewable Energy (SCI Q1 TOP)</em>
+                </div>
+                <div class="metadata">
+                    <em>Renewable Energy (SCI Q1 TOP)</em>
                     <br>
                     <a href="https://doi.org/10.1016/j.renene.2023.05.044">Paper</a>
-                    <p></p>
-                </td>
-            </tr>
+                </div>
+            </div>
+        </div>
 
-            <tr>
-                <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect" width="350" height="350">
-                </td>
-                <td>
-                    <a href="https://doi.org/10.1016/j.frl.2024.105669">      
-                        <papertitle>Green effect of energy transition policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</papertitle>
-                    </a>
-                    <br><br>
+        <div class="publication-item">
+            <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect">
+            <div class="publication-content">
+                <a href="https://doi.org/10.1016/j.frl.2024.105669">  
+                    <div class="papertitle">Green effect of energy transition policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</div>
+                </a>
+                <div class="authors">
                     Zhichao Yu, &nbsp;
                     Wenlan Xie, &nbsp;
                     Junjie Guo, &nbsp;
                     <strong style="color: #0F52BA;">Zhongyu Yang*</strong>, &nbsp;
-                    <br>
-                    <br>
+                </div>
+                <div class="abstract">
                     In the context of China's rapid urbanization and pressing environmental challenges, this study evaluates the effectiveness of the New Energy Demonstration Cities initiative in fostering sustainable urban development. Employing a quasi-experimental design, the study specifically analyzed the impact of this initiative on urban green development, quantified through the metric of Green Total Factor Productivity (GTFP). Our findings reveal significant improvements in GTFP, indicating enhanced air pollution control and energy use efficiency through targeted government intervention and industrial upgrading, moderated by financial development. These results not only challenge the efficacy of broad, non-specific policies but also underscore the importance of precision in policy targeting. The study highlights how well-crafted, localized energy policies can drive substantial gains in sustainable urban growth, offering crucial insights for global policymakers and urban planners. This research extends the discourse on policy effectiveness in environmental management, suggesting pivotal areas for future investigation.
-                    <br><br>
-                    <em style="font-size: 16px;">Finance Research Letters (SSCI Q1 1/111)</em>
+                </div>
+                <div class="metadata">
+                    <em>Finance Research Letters (SSCI Q1 1/111)</em>
                     <br>
                     <a href="https://doi.org/10.1016/j.frl.2024.105669"  >Paper</a>
-                    <p></p>
-                </td>
-            </tr>
-        </table>
+                </div>
+            </div>
+        </div>
 
         <hr>
 
         <!-- Manuscripts 部分 -->
-        <h2>📄 Manuscripts</h2>
-
-        <table>
-            <tr>
-                <td style="width:25%;">
-                    <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar" width="350" height="350">
-                </td>
-                <td>
-                    <a href="https://01yzzyu.github.io/rechar.github.io/">
-                        <papertitle>ReChar: <font color="#FF0000">Re</font>vitalising <font color="#FF0000">Char</font>acters with Structure-Preserved and User-Specified Aesthetic Enhancements</papertitle>
-                    </a>
-                    <br>
-                    <br>
+        <div class="publication-item">
+            <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar">
+            <div class="publication-content">
+                <a href="https://01yzzyu.github.io/rechar.github.io/">
+                    <div class="papertitle">ReChar: <font color="#FF0000">Re</font>vitalising <font color="#FF0000">Char</font>acters with Structure-Preserved and User-Specified Aesthetic Enhancements</div>
+                </a>
+                <div class="authors">
                     <strong style="color: #0F52BA;">Zhongyu Yang</strong>, &nbsp;
                     Zuhao Yang, &nbsp;
                     Zhang Luo, &nbsp;
@@ -120,17 +125,17 @@ author_profile: true
                     Wei Pang, &nbsp;
                     Jingfen Lan, &nbsp;
                     Yingfang Yuan†
-                    <br>
-                    <br>
+                </div>
+                <div class="abstract">
                     AI-Generated Content (AIGC) has recently surged in popularity, driven by its efficiency, consistent output quality, and versatile customization capabilities. While applications of image generation extend across numerous domains, research into stylized language writing system generation remains limited, particularly within the context of aesthetic enhancement. Inspired by the pictogram subset of Chinese characters, we propose <strong>ReChar</strong>, which aims to create visually appealing and culturally rich artworks that seamlessly integrate <strong>text-guided decorative elements</strong> and <strong>stylistic preferences</strong> within <strong>character structures</strong>. Additionally, we introduce ImageNet-ReChar, the first benchmark dataset designed to assess stylized character generation, with a focus on the generalization of user-defined elements. Our evaluation across multiple languages (Chinese, Japanese, English, and Latin) demonstrates ReChar’s ability to preserve original character structures while embedding decorative elements into the strokes and incorporating user-defined styles to achieve aesthetic enhancement. Our qualitative and quantitative analyses reveal that ReChar consistently outperforms existing methods.
-                    <br><br>
-                    <em style="font-size: 16px;">Under Review</em>
+                </div>
+                <div class="metadata">
+                    <em>Under Review</em>
                     <br>
                     <a href="https://01yzzyu.github.io/rechar.github.io/">Project Page</a>
-                    <p></p>
-                </td>
-            </tr>
-        </table>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
