--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -54,7 +54,7 @@ author_profile: true
     <main>
         {% if site.author.googlescholar %}
         <div class="wordwrap">
-            You can also find my articles on <a href="https://scholar.google.com/citations?user=YOUR_ID&user=x2VGVvcAAAAJ">my Google Scholar profile</a>.
+            You can also find my articles on <a href="https://scholar.google.com/citations?user=YOUR_ID&user=x2VGVvcAAAAJ">Google Scholar</a>.
         </div>
         {% endif %}
 
