--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -27,19 +27,22 @@ author_profile: true
         .papertitle {
             font-size: 18px; /* 标题字体大小 */
             font-weight: bold; /* 标题加粗 */
-            color: #333; /* 标题颜色 */
+            color: #0F52BA; /* 标题颜色与作者名字一致 */
         }
         .authors {
             margin: 10px 0; /* 作者信息的外边距 */
             color: #555; /* 作者信息颜色 */
+            font-size: 14px; /* 减小2个字号 */
         }
         .abstract {
             margin: 10px 0; /* 摘要的外边距 */
             color: #666; /* 摘要颜色 */
+            font-size: 14px; /* 减小2个字号 */
         }
         .metadata {
             font-style: italic; /* 元数据斜体 */
             color: #777; /* 元数据颜色 */
+            font-size: 14px; /* 减小2个字号 */
         }
         a {
             color: #0F52BA; /* 链接颜色 */
@@ -87,7 +90,7 @@ author_profile: true
         <div class="publication-item">
             <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect">
             <div class="publication-content">
-                <a href="https://doi.org/10.1016/j.frl.2024.105669">  
+                <a href="https://doi.org/10.1016/j.frl.2024.105669">      
                     <div class="papertitle">Green effect of energy transition policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</div>
                 </a>
                 <div class="authors">
@@ -109,7 +112,7 @@ author_profile: true
 
         <hr>
 
-        <!-- Manuscripts 部分 -->
+        <h2>Manuscripts</h2>
         <div class="publication-item">
             <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar">
             <div class="publication-content">
