--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -62,7 +62,11 @@ author_profile: true
         {% endif %}
 
         <hr>
-
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading style="font-size: 26px;"><i>Publications</i></heading>
+          </td>
+        
+        <h2>Energy Economics</h2>
         <!-- Energy Economics 部分 -->
         <div class="publication-item">
             <img src="/yzzyu.github.io/_pages/images/renewenegry.png" alt="Environmental Quality">
@@ -112,7 +116,7 @@ author_profile: true
 
         <hr>
 
-        <h2>Manuscripts</h2>
+        <h2>Computer Vision</h2>
         <div class="publication-item">
             <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar">
             <div class="publication-content">
