--- a/_pages/about.html
+++ b/_pages/about.html
@@ -40,6 +40,7 @@ redirect_from:
         </div>
       </div>
 
+
       <!-- News Section -->
       <div style="width:100%;margin-right:auto;margin-left:auto;">
         <div style="padding:20px;width:100%;vertical-align:middle">
@@ -47,37 +48,38 @@ redirect_from:
           <br>
           <br>
           <p style="font-size: 16px;">
-            <b>2024.12:</b> Started as a Remote Research Intern at KAUST, working on Retrieval-Augmented Generation (RAG) systems for vision knowledge.
+            <b>2024.12:</b> Work as a Remote Research Intern with <a href="https://junchen14.github.io/">Jun Chen</a> and <a href="https://www.mohamed-elhoseiny.com/">Mohamed Elhoseiny</a>, King Abdullah University of Science and Technology (KAUST), Saudi Arabia, focus on developing and optimizing web-scale Retrieval-Augmented Generation (RAG) systems tailored for understanding up-to-date vision knowledge.
           </p>
           <p style="font-size: 16px;">
-            <b>2024.08:</b> Released <a href="https://01yzzyu.github.io/rechar.github.io/">ReChar</a>, a tool for creating stylized Chinese character artworks.
+            <b>2024.08:</b> 🔥🔥🔥 We present <a href="https://01yzzyu.github.io/rechar.github.io/">ReChar</a> to create novel artworks that seamlessly incorporate user-defined elements and stylistic preferences into Chinese characters.
           </p>
           <p style="font-size: 16px;">
-            <b>2024.05:</b> Paper on <a href="https://doi.org/10.1016/j.frl.2024.105669">Green Effect of Energy Transition Policy</a> accepted at Finance Research Letters.
+            <b>2024.05:</b> 🔥🔥 Our paper <a href="https://doi.org/10.1016/j.frl.2024.105669">Green Effect of Energy Transition Policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</a> has been accepted to TOP Journals Finance Research Letters! A collaborative work with Zhichao Yu.
           </p>
           <p style="font-size: 16px;">
-            <b>2024.04:</b> Project on FPGA-Based AI Doctor funded by the national innovation program.
+            <b>2024.04:</b> 🔥 Our project, entitled <a href="http://gjcxcy.bjtu.edu.cn/NewLXItemListForStudentDetail.aspx?ItemNo=1186318&IsLXItem=1">FPGA-Based AI Doctor: Deep Learning-Based Clinical Target Delineation for Cervical Cancer</a>, was selected for funding under the national innovation and entrepreneurship project, advised by Professor Xinhua Wang.
           </p>
           <p style="font-size: 16px;">
-            <b>2024.04:</b> Started as a Research Assistant at CUHKSZ, studying AI for Science and Computer Vision.
+            <b>2024.04:</b> Start working as a Research Assistant in CUHKSZ, advised with <a href="http://www.zhangruimao.site/">Ruimao Zhang</a>, studying AI for Science and Computer Vision.
           </p>
           <p style="font-size: 16px;">
-            <b>2024.03:</b> Began Remote Research Internship at Heriot-Watt University, focusing on AIGC.
+            <b>2024.03:</b> Start working as a Remote Research Intern with <a href="https://yuanjames.github.io/">Yingfang Yuan</a> at Heriot-Watt University, studying AIGC（Artificial Intelligence Generated Content).
           </p>
           <p style="font-size: 16px;">
-            <b>2024.01:</b> Ranked 1st in the Central Universities Basic Research Fund (Barley Plan) for medical segmentation research.
+            <b>2024.01:</b> 🔥🔥🔥 Our project, entitled UNet-Centric MambaMorph: A Comprehensive Visual Mamba Framework Enhanced with Cross-Scan and Semi-Supervised Learning for Medical Segmentation, has been selected as an <a href="https://xxb.lzu.edu.cn/xingzhenggongwen/xzgwpdf/2024/0621/271594.html">Outstanding Undergraduate project in the Central Universities Basic Research Fund (Barley Plan)</a>, advised by Professor <a href="http://mathteacher.lzu.edu.cn/system/TeacherProfileqt/content.jsp?id=45">Wenting Zhang</a>, as the college student to be ranked first. <b>(TOP 0.1%，36/20465)</b>
           </p>
           <p style="font-size: 16px;">
-            <b>2023.05:</b> Paper on <a href="https://doi.org/10.1016/j.renene.2023.05.044">    Environmental Quality in OECD Countries</a> accepted at Renewable Energy.
+            <b>2023.05:</b> 🔥🔥 Our paper <a href="https://doi.org/10.1016/j.renene.2023.05.044">  Toward enhancing environmental quality in OECD countries: Role of municipal waste, renewable energy, environmental innovation, and environmental policy</a> is accepted to TOP Journals Renewable Energy! A collaborative work with Mengying Su.
           </p>
           <p style="font-size: 16px;">
-            <b>2023.03:</b> Ranked 1st in the national innovation and entrepreneurship project on Tropical Linear Representation of Involute Chinese Monoids.
+            <b>2023.03:</b> 🔥 As the sole sophomore student to be ranked first in the national innovation and entrepreneurship project <a href="http://gjcxcy.bjtu.edu.cn/NewLXItemListForStudentDetail.aspx?ItemNo=1100306">Tropical Linear Representation of Involute Chinese Monoids</a>, advised by Professor <a href="http://mathteacher.lzu.edu.cn/system/TeacherProfileqt/content.jsp?id=45">Wenting Zhang</a>.
           </p>
           <p style="font-size: 16px;">
-            <b>2022.06:</b> Paper on <a href="https://kns.cnki.net/kcms2/article/abstract?v=5UWSsHjGZiG4_hfQdJi2g45CsnhSUqAQWLr8QGITMYDA17gfF5JJx5zplDrZWLEtUw_cwdGQB4McAih5ZHCedzgYrtUdVTeeg8lwHr4Mw1ptUxJGRhILZmxdAXcxNVzRIf7iDdCVtPE=&uniplatform=NZKPT&flag=copy">GDP Analysis of Gansu Province</a> accepted at Chinese Market.
+            <b>2022.06:</b> 🔥 Our paper <a href="https://kns.cnki.net/kcms2/article/abstract?v=5UWSsHjGZiG4_hfQdJi2g45CsnhSUqAQWLr8QGITMYDA17gfF5JJx5zplDrZWLEtUw_cwdGQB4McAih5ZHCedzgYrtUdVTeeg8lwHr4Mw1ptUxJGRhILZmxdAXcxNVzRIf7iDdCVtPE=&uniplatform=NZKPT&flag=copy">Analysis and Forecast of GDP of Gansu Province based on ARIMA Model</a> is accepted to Chinese Market (Chinese core journal)!
           </p>
         </div>
       </div>
+
 
       <!-- Education Section -->
       <div style="width:100%;margin-right:auto;margin-left:auto;">
