--- a/_pages/about.html
+++ b/_pages/about.html
@@ -40,7 +40,6 @@ redirect_from:
         </div>
       </div>
 
-
       <!-- News Section -->
       <div style="width:100%;margin-right:auto;margin-left:auto;">
         <div style="padding:20px;width:100%;vertical-align:middle">
@@ -80,7 +79,6 @@ redirect_from:
         </div>
       </div>
 
-
       <!-- Education Section -->
       <div style="width:100%;margin-right:auto;margin-left:auto;">
         <div style="padding:20px;width:100%;vertical-align:middle">
@@ -99,17 +97,17 @@ redirect_from:
         <div style="padding:20px;width:100%;vertical-align:middle">
           <div style="display:flex;align-items:center;">
             <div style="width:25%;">
-              <img src="/yzzyu.github.io/_pages/images/kaust.png" alt="kaust_logo" width="100" height="100" style="border-style: none">
+              <img src="/yzzyu.github.io/_pages/images/kaust.png" alt="kaust_logo" width="150" height="150" style="border-style: none">
             </div>
             <div style="width:75%;">
               <p style="font-size: 16px; margin: 0;">
                 <b>King Abdullah University of Science and Technology (KAUST)</b> &emsp; 12/24 – Present
               </p>
               <p style="font-size: 14px; margin: 0;">
-                Remote Research Intern at Vision-CAIR
+                Remote Research Intern at  <a href="https://vision-cair.kaust.edu.sa/">Vision-CAIR<a>
               </p>
               <p style="font-size: 14px; margin: 0;">
-                Developing and optimizing web-scale Retrieval-Augmented Generation (RAG) systems  tailored for understanding up-to-date vision knowledge.
+                Developing and optimizing web-scale Retrieval-Augmented Generation (RAG) systems tailored for understanding up-to-date vision knowledge.
               </p>
               <p style="font-size: 14px; margin: 0;">
                 Advised by <a href="https://junchen14.github.io/">Jun Chen</a> and <a href="https://www.mohamed-elhoseiny.com/">Mohamed Elhoseiny</a>.
@@ -123,7 +121,7 @@ redirect_from:
         <div style="padding:20px;width:100%;vertical-align:middle">
           <div style="display:flex;align-items:center;">
             <div style="width:25%;">
-              <img src="/yzzyu.github.io/_pages/images/cuhksz.png" alt="cuhksz_logo" width="200" height="200" style="border-style: none">
+              <img src="/yzzyu.github.io/_pages/images/cuhksz.png" alt="cuhksz_logo" width="150" height="150" style="border-style: none">
             </div>
             <div style="width:75%;">
               <p style="font-size: 16px; margin: 0;">
@@ -147,7 +145,7 @@ redirect_from:
         <div style="padding:20px;width:100%;vertical-align:middle">
           <div style="display:flex;align-items:center;">
             <div style="width:25%;">
-              <img src="/yzzyu.github.io/_pages/images/heriot_watt.png" alt="heriot_watt_logo" width="200" height="200" style="border-style: none">
+              <img src="/yzzyu.github.io/_pages/images/heriot_watt.png" alt="heriot_watt_logo" width="150" height="150" style="border-style: none">
             </div>
             <div style="width:75%;">
               <p style="font-size: 16px; margin: 0;">
@@ -171,7 +169,7 @@ redirect_from:
         <div style="padding:20px;width:100%;vertical-align:middle">
           <div style="display:flex;align-items:center;">
             <div style="width:25%;">
-              <img src="/yzzyu.github.io/_pages/images/jiyun_tech.png" alt="jiyun_tech_logo" width="200" height="200" style="border-style: none">
+              <img src="/yzzyu.github.io/_pages/images/jiyun_tech.png" alt="jiyun_tech_logo" width="150" height="150" style="border-style: none">
             </div>
             <div style="width:75%;">
               <p style="font-size: 16px; margin: 0;">
@@ -192,7 +190,7 @@ redirect_from:
         <div style="padding:20px;width:100%;vertical-align:middle">
           <div style="display:flex;align-items:center;">
             <div style="width:25%;">
-              <img src="/yzzyu.github.io/_pages/images/iflytek.png" alt="iflytek_logo" width="200" height="200" style="border-style: none">
+              <img src="/yzzyu.github.io/_pages/images/iflytek.png" alt="iflytek_logo" width="150" height="150" style="border-style: none">
             </div>
             <div style="width:75%;">
               <p style="font-size: 16px; margin: 0;">
