--- a/_pages/about.html
+++ b/_pages/about.html
@@ -104,7 +104,7 @@ redirect_from:
                 <b>King Abdullah University of Science and Technology (KAUST)</b> &emsp; 12/24 – Present
               </p>
               <p style="font-size: 14px; margin: 0;">
-                Remote Research Intern at  <a href="https://vision-cair.kaust.edu.sa/">Vision-CAIR<a>
+                Remote Research Intern at  <a href="https://vision-cair.kaust.edu.sa/">Vision-CAIR</a>.
               </p>
               <p style="font-size: 14px; margin: 0;">
                 Developing and optimizing web-scale Retrieval-Augmented Generation (RAG) systems tailored for understanding up-to-date vision knowledge.
