--- a/_pages/about.html
+++ b/_pages/about.html
@@ -15,6 +15,27 @@ redirect_from:
   <meta name="author" content="Zhongyu Yang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <!-- 加载 Latin Modern Roman 字体以模拟 Computer Modern -->
+  <link href="https://fonts.googleapis.com/css2?family=Latin+Modern+Roman&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Latin Modern Roman', serif; /* 使用 Latin Modern Roman 模拟 Computer Modern */
+    }
+    heading {
+      font-family: 'Latin Modern Roman', serif;
+      font-weight: bold;
+    }
+    p {
+      font-family: 'Latin Modern Roman', serif;
+    }
+    a {
+      color: darkblue; /* 保持链接颜色一致 */
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
