--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -81,7 +81,7 @@ author_profile: true
                 </a>
                 <div class="metadata">
                     <em>
-                        <span class="journal-name"><em>Renewable Energy</span>
+                        <span class="journal-name">Renewable Energy</span>
                         <span class="journal-info">(SCI Q1 TOP, IF = 9.0)</span>
                     </em>
                 </div>
@@ -96,7 +96,6 @@ author_profile: true
                     The considerable increase in municipal waste has become a primary global concern due to the contamination of the environment through the emission of greenhouse gases. Therefore, many OECD countries have adopted municipal waste management practices. This study is a baseline attempt to explore the long-term effect of municipal waste management along with the energy transition, environmental innovation, and environmental policy stringency on GHG emissions in ten OECD countries from 1994 to 2020. This objective is realized by using non-parametric panel quantile regression. The estimated result reveals the asymmetric effect of selected explanatory variables on GHG emissions at various quantiles. The findings show that an increase in municipal waste can increase GHGs emissions at lower quantiles, while an insignificant effect is observed at higher quantiles. Similarly, energy transition, environmental innovation, and environmental policy stringency reveal asymmetric effects across the quantiles. The findings urge OECD countries to adopt more efficient municipal waste management practices and encourage renewable energy transition and environmental innovation. Environmental policy stringency can also be instrumental in enhancing environmental sustainability.
                 </div>
                 <div class="metadata">
-                    
                     <a href="https://doi.org/10.1016/j.renene.2023.05.044">Paper</a>
                 </div>
             </div>
@@ -105,7 +104,7 @@ author_profile: true
         <div class="publication-item">
             <img src="/yzzyu.github.io/_pages/images/Greeneffect.png" alt="Green Effect">
             <div class="publication-content">
-                <a href="https://doi.org/10.1016/j.frl.2024.105669">          
+                <a href="https://doi.org/10.1016/j.frl.2024.105669">            
                     <div class="papertitle">Green effect of energy transition policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</div>
                 </a>
                 <div class="metadata">
@@ -140,7 +139,7 @@ author_profile: true
                 </a>
                 <div class="metadata">
                     <em>
-                        <span class="journal-name"><em>Under Review</span>
+                        <span class="journal-name">Under Review</span>
                     </em>
                 </div>
                 <div class="authors">
